# LlamaLib

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE_source.html  LLM.cpp  LLM.h  LLMClient.cpp  LLMClient.h  LLMFunctions.cpp  LLMFunctions.h  LLM_8cpp_source.html  LLM_8h.html  LLM_8h__dep__incl.map  LLM_8h__dep__incl.md5  LLM_8h__incl.map  LLM_8h__incl.md5  LLM_8h_af9a1fc25d2366afe3ed03d9289176e35_icgraph.map  LLM_8h_af9a1fc25d2366afe3ed03d9289176e35_icgraph.md5  LLM_8h_source.html  LLM__agent_8cpp_source.html  LLM__agent_8h.html  LLM__agent_8h__dep__incl.map  LLM__agent_8h__dep__incl.md5  LLM__agent_8h__incl.map  LLM__agent_8h__incl.md5  LLM__agent_8h_source.html  LLM__client_8cpp_source.html  LLM__client_8h.html  LLM__client_8h__dep__incl.map  LLM__client_8h__dep__incl.md5  LLM__client_8h__incl.map  LLM__client_8h__incl.md5  LLM__client_8h_source.html  LLM__runtime_8cpp_source.html  LLM__runtime_8h.html  LLM__runtime_8h__dep__incl.map  LLM__runtime_8h__dep__incl.md5  LLM__runtime_8h__incl.map  (+566 more)
.github/: build_openssl.sh
.github/doxygen/: Doxyfile  header.html  layout.xml  prepare_readme.sh  run.sh
.github/scripts/: build_openssl.sh  change_version.sh  find_includes.py  release.sh  upgrade_llama.cpp.sh
.github/tests/csharp-dotnet/: LlamaLib.2.0.1.nupkg  Program.cs  Program.csproj  test.yaml
.github/workflows/: build_ios.yaml  build_ios_app.yaml  build_library.yaml  build_library_steps.yaml  build_library_template.yaml  build_library_test.yaml  build_llama_cpp.yaml  build_usearch.yaml  create_build_script.py  test.yaml  test_library.yaml
.github/workflows_template/: build_library_steps.yaml  build_library_template.yaml  create_build_script.py
LIBRARY~/: CMakeLists.txt  llmunity.cpp  llmunity.h  main.cpp
LIBRARY~/main/: CMakeLists.txt  llmunity.cpp  llmunity.h
archchecker/: CMakeLists.txt  archchecker.cpp  archchecker.h
cmake/: LLAMALIBConfig.cmake  LLAMALIBConfigVersion.cmake  LlamaLibCommon.cmake  LlamaLibConfig.cmake  LlamaLibConfigVersion.cmake  LlamaLibTargets.cmake
csharp/: LLM.cs  LLMAgent.cs  LLMClient.cs  LLMService.cs  LibraryLoader.cs  LlamaLib.cs  LlamaLib.csproj  LlamaLib.targets  README.md
curl/: build.sh
curl/android/: BUILD_SUMMARY.txt  USAGE.txt
curl/android/arm64-v8a/lib/: libcurl.la
curl/android/x86_64/lib/: libcurl.la
examples/: README.md
examples/agent/: main.cpp
examples/basic/: main.cpp
examples/cpp/: CMakeLists.txt  README.md  main.cpp
examples/cpp/agent/: README.md  main.cpp
examples/cpp/basic/: CMakeLists.txt  README.md  main.cpp
examples/cpp/basic_embeddings/: CMakeLists.txt  README.md  main.cpp
examples/cpp/local_client/: README.md  main.cpp
examples/cpp/remote_client/: CMakeLists.txt  README.md  main.cpp  server.cpp
examples/csharp/: README.md
examples/csharp/agent/: LlamaLibExamples.csproj  Program.cs  README.md
examples/csharp/basic/: LlamaLibExamples.csproj  Program.cs  README.md
examples/csharp/basic_embeddings/: LlamaLibExamples.csproj  Program.cs  README.md
examples/csharp/local_client/: LlamaLibExamples.csproj  Program.cs  README.md
examples/csharp/remote_client/: Client.cs  LlamaLibExamples.csproj  README.md  Server.cs
examples/local_client/: main.cpp
examples/remote_client/: README.md  main.cpp
include/: LLM.h  LLM_agent.h  LLM_client.h  LLM_runtime.h  LLM_service.h  LLM_service_builder.h  LlamaLib.h  archchecker.h  completion_processor.h  defs.h  error_handling.h  ios_http_transport.h  logging.h
ios/Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  globalgamemanagers.assets.resS  level0  sharedassets0.assets  sharedassets0.assets.resS
ios/Data/Raw/: LLMManager.json
ios/Il2CppOutputProject/Source/il2cppOutput/: Assembly-CSharp.cpp  Assembly-CSharp_CodeGen.c  Cloud.Unum.USearch.cpp  Cloud.Unum.USearch_CodeGen.c  GenericMethods.cpp  GenericMethods__1.cpp  GenericMethods__10.cpp  GenericMethods__11.cpp  GenericMethods__12.cpp  GenericMethods__13.cpp  GenericMethods__14.cpp  GenericMethods__15.cpp  GenericMethods__16.cpp  GenericMethods__17.cpp  GenericMethods__18.cpp  GenericMethods__19.cpp  GenericMethods__2.cpp  GenericMethods__20.cpp  GenericMethods__21.cpp  GenericMethods__22.cpp  GenericMethods__23.cpp  GenericMethods__24.cpp  GenericMethods__3.cpp  GenericMethods__4.cpp  GenericMethods__5.cpp  GenericMethods__6.cpp  GenericMethods__7.cpp  GenericMethods__8.cpp  GenericMethods__9.cpp  Generics.cpp  Generics__1.cpp  Generics__10.cpp  Generics__11.cpp  (+66 more)
ios/Unity-iPhone.xcodeproj/: project.pbxproj
patches/: httplib_v0.20.1.patch  llama.cpp.patch  llama.cpp.patch.old  revert_httplib_0.20.0.patch  tinyBLAS.patch
patches/tinyBLAS/: copy_original_or_patched.sh  ggml-cuda.cu.bp  ggml-cuda.cu.rollup  patch_cuda.sh  rollup_back.py
playground/.github/workflows/: build_llama_cpp.yaml
playground/Runtime/: LLMUnitySetup.cs
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+26 more)
src/: CMakeLists.txt  LLM.cpp  LLM_agent.cpp  LLM_client.cpp  LLM_runtime.cpp  LLM_service.cpp  archchecker.cpp  completion_processor.cpp  error_handling.cpp  ios_http_transport.mm  logging.cpp
tests/: CMakeLists.txt  download_test_models.sh  llamalib_tests.cpp
tests/cpp/: CMakeLists.txt  llamalib_tests.cpp
tests/cpp-cmake/: CMakeLists.txt  test.cpp
tests/csharp/: LlamaLib.Test.csproj  NuGet.Config  Tests.cs
tinyBLAS/: TINYBLAS.md  ggml-cuda.cu  ggml-cuda.cu.rollup  ggml-cuda.cu.rollup.patch  ggml-cuda.rollup.patch  patch_cuda.sh
tinyBLAS/b2989/: ggml-cuda.cu
tinyBLAS/b3184/: ggml-cuda.cu  ggml-cuda.cu.diff  ggml-cuda.cu.rollup
tinyBLAS/b3580/: ggml-cuda.cu
tools/: CMakeLists.txt  llamalib_server.cpp
(+524 files in other folders)
