set(NAME llamalib_tests)
add_executable(${NAME} llamalib_tests.cpp)
LLAMALIB_COMPILE_DEFS(${NAME})
target_link_libraries(${NAME} PRIVATE ${LLAMALIB_STATIC_LIBRARY})
if (LLAMALIB_BUILD_RUNTIME_LIB)
    target_compile_definitions(${NAME} PRIVATE RUNTIME_TESTS)
    target_link_libraries(${NAME} PRIVATE ${LLAMALIB_RUNTIME_LIBRARY})
endif()
install(TARGETS ${NAME} RUNTIME)