set(NAME llamalib_tests)
add_executable(${NAME} llamalib_tests.cpp)
LLAMALIB_COMPILE_DEFS(${NAME})
target_link_libraries(${NAME} PRIVATE ${LLAMALIB_STATIC_LIBRARY})
install(TARGETS ${NAME} RUNTIME)

set(NAME llamalib_tests_runtime)
add_executable(${NAME} llamalib_tests.cpp)
LLAMALIB_COMPILE_DEFS(${NAME})
target_compile_definitions(${NAME} PRIVATE RUNTIME_TESTS)
target_link_libraries(${NAME} PRIVATE ${LLAMALIB_RUNTIME_LIBRARY})
install(TARGETS ${NAME} RUNTIME)